# renderers

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish-dev.yml  publish.yml  style.yml
docs/: renderer-config.md
renderers/: __init__.py  base.py  client.py  configs.py  deepseek_r1.py  deepseek_v3.py  default.py  gemma4.py  glm45.py  glm5.py  gpt_oss.py  hf_compat.py  kimi_k2.py  kimi_k25.py  laguna_xs2.py  llama_3.py  minimax_m2.py  nemotron3.py  olmo3.py  parsers.py  parsing.py  qwen3.py  qwen35.py  qwen36.py  qwen3_vl.py  streams.py
tests/: conftest.py  test_bridge.py  test_build_helpers.py  test_client.py  test_deepseek_r1.py  test_gemma4.py  test_gpt_oss_harmony_parity.py  test_incremental.py  test_kimi_k25_tool_schema.py  test_llama_3.py  test_load_tokenizer.py  test_load_tokenizer_fastokens.py  test_message_indices.py  test_multimodal.py  test_nemotron3_parity.py  test_nemotron3_ultra.py  test_parse_response.py  test_parse_response_robustness.py  test_parsers.py  test_preserve_thinking.py  test_render_ids.py  test_renderer_config.py  test_renderer_config_parity.py  test_roundtrip.py  test_streams.py  test_tokens_per_message.py  test_tool_arg_type_preservation.py
