[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "renderers"
version = "0.1.5"
description = "Chat template renderers — deterministic message-to-token conversion for LLM training"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy",
    "openai>=1.108.1",
    "tiktoken",
    "jinja2",
    "transformers>=4.50.0",
    # Used by GptOssRenderer to render and parse harmony tokens. Vendoring
    # OpenAI's reference implementation keeps us byte-identical with vLLM
    # (which also uses it) and saves us mirroring a 330-line Jinja template.
    "openai-harmony>=0.0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["renderers"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.uv]
exclude-newer = "7 days"
